language/move-lang/tests/move_check/parser/struct_missing_lbrace.exp
error: 

   ┌── tests/move_check/parser/struct_missing_lbrace.move:3:5 ───
   │
 3 │     fun f() {}
   │     ^ Expected '}'
   ·
 2 │     struct S { f: u64
   │              - To match this '{'
   │

